# ChangeLog for x11-misc/xaos
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/xaos/ChangeLog,v 1.31 2010/11/02 16:31:05 tomka Exp $

  02 Nov 2010; Thomas Kahle <tomka@gentoo.org> xaos-3.5.ebuild:
  adding missing dep for USE=doc, fixes bug 342531

*xaos-3.5 (26 Jul 2009)

  26 Jul 2009; Sébastien Fabbro <bicatali@gentoo.org> -xaos-3.4.ebuild,
  +xaos-3.5.ebuild:
  Version bump. Ebuild adpated to upstream file reorganisation

*xaos-3.4-r1 (28 Mar 2009)

  28 Mar 2009; Sébastien Fabbro <bicatali@gentoo.org>
  +files/xaos-3.4-include.patch, +files/xaos-3.4-makefile.patch,
  +files/xaos-3.4-png.patch, +files/xaos-3.4-x11.patch, +files/xaos.png,
  metadata.xml, +xaos-3.4-r1.ebuild:
  Fixed for forced stripping (bug #252099), png magic (bug #263310), added
  gtk driver, desktop files, and some patch from debian

  31 Jul 2008; Markus Dittrich <markusle@gentoo.org> xaos-3.4.ebuild:
  Force the use of sci-libs/gsl to avoid accidental generation of x86
  assembly code on non x86 architectures (see bug #233318).

*xaos-3.4 (23 Jul 2008)

  23 Jul 2008; Michał Januszewski <spock@gentoo.org> +xaos-3.4.ebuild:
  Version bump.

  22 Jun 2007; Donnie Berkholz <dberkholz@gentoo.org>; xaos-3.2.ebuild:
  (#153600) Remove virtual/x11 dep in attempt to fix missing xf86dgaproto error.

  23 Nov 2006; Patrick Kursawe <phosphan@gentoo.org> -files/gcc3.4.patch,
  -xaos-3.1.ebuild, -xaos-3.1.1.ebuild, -xaos-3.1.3.ebuild:
  Removing unused old versions.

  29 Sep 2006; <ticho@gentoo.org> xaos-3.2.ebuild:
  Stable on x86, bug #146009.

  28 Sep 2006; Stephanie Lockwood-Childs <wormo@gentoo.org> xaos-3.2.ebuild:
  stable on ppc (Bug #146009)

  26 Sep 2006; Jason Wever <weeve@gentoo.org> xaos-3.2.ebuild:
  Stable on SPARC wrt bug #146009.

  24 Sep 2006; <blubb@gentoo.org> xaos-3.2.ebuild:
  stable on amd64

*xaos-3.2 (10 Apr 2006)

  10 Apr 2006; Patrick Kursawe <phosphan@gentoo.org> +xaos-3.2.ebuild: