@@ -11,13 +11,13 @@ DIST XaoS-3.4.tar.gz 1977108 RMD160 37ce4728940e80c2876792650aa656236893d5f7 SHA
 DIST xaos-3.5.tar.gz 2930590 RMD160 193553818646fbf2d7c9f0c855ca3123446e16bc SHA1 6d16a58187fba7276e6bd0547cc2fd6bb073b801 SHA256 471fa752154a8e4c4687797fe1241df1b3f82400b2ef4e6a603969a27cd74842
 EBUILD xaos-3.2.ebuild 1935 RMD160 6046880b932581ddff7f9a54c1ea332a8c47bf60 SHA1 1b0560490af021d7edb56326d6de0c50164c4e9b SHA256 5db1faae97ea9f0b717b84a03a2c78611bba76b23d4206db68ed30f10fb0f05c
 EBUILD xaos-3.4-r1.ebuild 2254 RMD160 89d4b7fb131e9955e162519d242009a109c69d19 SHA1 b0cb803209c62e8c78734d3fafe043a376f4b968 SHA256 1601d6b061342156924ef9d107bb1c93048fc3331c121a50c58a7d21f88e98d8
-EBUILD xaos-3.5.ebuild 1945 RMD160 fe9f0d471773b46189c5e10464a57cb00e446d34 SHA1 2250fcd4b89b9a90430fa8f0a66704503de99f82 SHA256 e454e91a74d2f5d42a66288a2b8798b7a73ed9c2433b12c7233918dc4a0f2c4f
-MISC ChangeLog 4062 RMD160 22f68eae43300dce7ead7ed600a426b424a43ff7 SHA1 0a7b7ee429d7cfdb0f69c2bd84e983cb234da6fa SHA256 4ced9866d5bbaf703ccf19d72e114e45d44ec36883faaba3a861593a9a5ac3ad
+EBUILD xaos-3.5.ebuild 1943 RMD160 5cb60fb59b18fdaa344cf652c6124e48c3339b78 SHA1 6e1c882caf9fadbfe81bd83177864396306717ef SHA256 0f42833da01b71d4f60bc48909d7a0eaab5cd99a8a4c763a8d7c42e2a975815b
+MISC ChangeLog 4156 RMD160 2982d1566c266f675f026d3ea664ce3d5da35631 SHA1 33030b66f527325754a2521ea727e60f52cf3f27 SHA256 6427a81be9d0c277b0282edc9bdd5093cdeb0e750f609265a7505ad9217e827b
 MISC metadata.xml 583 RMD160 5055148d95d127d29f4e963644eb666ac7e0c5eb SHA1 9f9eb601f2c7882611c1c0269b4e041c17335687 SHA256 2f0dd73d7c7fc6fd74d7a430ca50e03d390a200346bb9da765fefb8cb901bcf7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkzQNdoACgkQnZsgo/h8kNZ/vgCeJubsaGriR0+VUQqVt/tEc1BX
-OCAAn0UJkindJHC7XHEuqgFece2yG/Ii
-=nTw1
+iEYEARECAAYFAkzQO4MACgkQnZsgo/h8kNYc9gCfTfiy8CK0lm5/UJtVXVwAKM0E
+17cAn1CW6XZqYM/aLZiXCPLzvo5pikpk
+=fEYb
 -----END PGP SIGNATURE-----
