@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xaos/xaos-3.5.ebuild,v 1.2 2010/11/02 16:31:05 tomka Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xaos/xaos-3.5.ebuild,v 1.3 2010/11/02 16:55:08 tomka Exp $
 
 EAPI=2
 inherit eutils autotools
@@ -11,7 +11,7 @@ SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="~amd64 ~ppc ~sparc ~x86"
+KEYWORDS="~amd64 ~ppc ~sparc x86"
 IUSE="aalib doc -gtk nls png svga threads X"
 
 RDEPEND="sys-libs/zlib
@@ -26,7 +26,7 @@ RDEPEND="sys-libs/zlib
 
 DEPEND="${RDEPEND}
 	dev-util/pkgconfig
-	doc? ( virtual/latex-base 
+	doc? ( virtual/latex-base
 		dev-texlive/texlive-texinfo )
 	X? ( x11-proto/xf86vidmodeproto
 		 x11-proto/xextproto
