@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xaos
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xaos/ChangeLog,v 1.31 2010/11/02 16:31:05 tomka Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xaos/ChangeLog,v 1.32 2010/11/02 16:55:08 tomka Exp $
+
+  02 Nov 2010; Thomas Kahle <tomka@gentoo.org> xaos-3.5.ebuild:
+  x86 stable per bug #342295
 
   02 Nov 2010; Thomas Kahle <tomka@gentoo.org> xaos-3.5.ebuild:
   adding missing dep for USE=doc, fixes bug 342531
